force-app/main/default/objects/PDRI__Metadata_Bundle__c/PDRI__Metadata_Bundle__c.object-meta.xml
<CustomObject>
    <label>Metadata Bundle</label>
    <nameField>
        <displayFormat>MB-{0}</displayFormat>
        <label>Metadata Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>