force-app/main/default/objects/PDRI__Metadata_Bundle__c/fields/PDRI__Comparison_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Comparison_ID__c</fullName>
    <label>Comparison ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>