force-app/main/default/objects/PDRI__Metadata_Bundle__c/fields/PDRI__Destructive_Changes_Order__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Destructive_Changes_Order__c</fullName>
    <label>Destructive Changes Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>