force-app/main/default/objects/PDRI__Metadata_Bundle__c/fields/PDRI__Test_Class_Names__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Test_Class_Names__c</fullName>
    <label>Test Class Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>